# simple-rust-stopwatch

./: Cargo.toml
src/: config.rs  main.rs  stopwatch.rs
