[package]
name = "better-rust-stopwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.57", features = ["derive"] }
confy = "2.0.0"
crossterm = "0.29.0"
directories = "6.0.0"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
